# majjit-lsp

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.zed/: tasks.json
client/: package.json
client/src/: extension.ts
editors/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: .gitignore  Cargo.toml  extension.toml
editors/zed/languages/jjmagit/: config.toml  highlights.scm  injections.scm
editors/zed/src/: lib.rs
examples/: index.rs  testing.rs  wip.rs
scripts/: .gitignore  jj-colors-to-zed.ts
src/: commands.rs  jj.rs  lib.rs  main.rs  page_writer.rs  semantic_token.rs
src/pages/: annotate.rs  commit.rs  mod.rs  split.rs  stage.rs  status.rs
