[package]
name = "jjmagit-language-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chumsky = "0.9.3"
env_logger = "0.11"
ropey = "1.6"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4"
im-rc = "15.1"
oxc_index = "4.1"
anyhow = "1.0"
thiserror = "2.0"
rust-lapper = "1.2"
jj-lib = "0.38"
jj-cli = "0.38"
futures-executor = "0.3"
chrono = { version = "0.4", default-features = false }
